Prevent ul,ol elements’s style-types overlapping with float elements + assets

--- a/web/app/themes/ecommerce-influence/src/css/blocks/episode.scss
+++ b/web/app/themes/ecommerce-influence/src/css/blocks/episode.scss
@@ -165,6 +165,9 @@
 		font-size: px-to-ems(25);
 		line-height: px-to-ems(29,25);
 	}
+	ul,ol{
+		overflow: hidden;
+	}
 	p,li{
 		margin-top: 10px;
 
